--- a/css/style.css
+++ b/css/style.css
@@ -1366,172 +1366,7 @@
     }
   }
   
-  @media (min-width: 1200px) {
-    .col-xl {
-      flex-basis: 0;
-      flex-grow: 1;
-      max-width: 100%;
-    }
-    .row-cols-xl-1 > * {
-      flex: 0 0 100%;
-      max-width: 100%;
-    }
-    .row-cols-xl-2 > * {
-      flex: 0 0 50%;
-      max-width: 50%;
-    }
-    .row-cols-xl-3 > * {
-      flex: 0 0 33.33333%;
-      max-width: 33.33333%;
-    }
-    .row-cols-xl-4 > * {
-      flex: 0 0 25%;
-      max-width: 25%;
-    }
-    .row-cols-xl-5 > * {
-      flex: 0 0 20%;
-      max-width: 20%;
-    }
-    .row-cols-xl-6 > * {
-      flex: 0 0 16.66667%;
-      max-width: 16.66667%;
-    }
-    .col-xl-auto {
-      flex: 0 0 auto;
-      width: auto;
-      max-width: 100%;
-    }
-    .col-xl-1 {
-      flex: 0 0 8.33333%;
-      max-width: 8.33333%;
-    }
-    .col-xl-2 {
-      flex: 0 0 16.66667%;
-      max-width: 16.66667%;
-    }
-    .col-xl-3 {
-      flex: 0 0 25%;
-      max-width: 25%;
-    }
-    .col-xl-4 {
-      flex: 0 0 33.33333%;
-      max-width: 33.33333%;
-    }
-    .col-xl-5 {
-      flex: 0 0 41.66667%;
-      max-width: 41.66667%;
-    }
-    .col-xl-6 {
-      flex: 0 0 50%;
-      max-width: 50%;
-    }
-    .col-xl-7 {
-      flex: 0 0 58.33333%;
-      max-width: 58.33333%;
-    }
-    .col-xl-8 {
-      flex: 0 0 66.66667%;
-      max-width: 66.66667%;
-    }
-    .col-xl-9 {
-      flex: 0 0 75%;
-      max-width: 75%;
-    }
-    .col-xl-10 {
-      flex: 0 0 83.33333%;
-      max-width: 83.33333%;
-    }
-    .col-xl-11 {
-      flex: 0 0 91.66667%;
-      max-width: 91.66667%;
-    }
-    .col-xl-12 {
-      flex: 0 0 100%;
-      max-width: 100%;
-    }
-    .order-xl-first {
-      order: -1;
-    }
-    .order-xl-last {
-      order: 13;
-    }
-    .order-xl-0 {
-      order: 0;
-    }
-    .order-xl-1 {
-      order: 1;
-    }
-    .order-xl-2 {
-      order: 2;
-    }
-    .order-xl-3 {
-      order: 3;
-    }
-    .order-xl-4 {
-      order: 4;
-    }
-    .order-xl-5 {
-      order: 5;
-    }
-    .order-xl-6 {
-      order: 6;
-    }
-    .order-xl-7 {
-      order: 7;
-    }
-    .order-xl-8 {
-      order: 8;
-    }
-    .order-xl-9 {
-      order: 9;
-    }
-    .order-xl-10 {
-      order: 10;
-    }
-    .order-xl-11 {
-      order: 11;
-    }
-    .order-xl-12 {
-      order: 12;
-    }
-    .offset-xl-0 {
-      margin-left: 0;
-    }
-    .offset-xl-1 {
-      margin-left: 8.33333%;
-    }
-    .offset-xl-2 {
-      margin-left: 16.66667%;
-    }
-    .offset-xl-3 {
-      margin-left: 25%;
-    }
-    .offset-xl-4 {
-      margin-left: 33.33333%;
-    }
-    .offset-xl-5 {
-      margin-left: 41.66667%;
-    }
-    .offset-xl-6 {
-      margin-left: 50%;
-    }
-    .offset-xl-7 {
-      margin-left: 58.33333%;
-    }
-    .offset-xl-8 {
-      margin-left: 66.66667%;
-    }
-    .offset-xl-9 {
-      margin-left: 75%;
-    }
-    .offset-xl-10 {
-      margin-left: 83.33333%;
-    }
-    .offset-xl-11 {
-      margin-left: 91.66667%;
-    }
-  }
-  
+ 
   .table {
     width: 100%;
     margin-bottom: 1rem;
@@ -1815,54 +1650,7 @@
     color: #fff;
     background-color: rgba(255, 255, 255, 0.075);
   }
-  
-  @media (max-width: 575.98px) {
-    .table-responsive-sm {
-      display: block;
-      width: 100%;
-      overflow-x: auto;
-      -webkit-overflow-scrolling: touch;
-    }
-    .table-responsive-sm > .table-bordered {
-      border: 0;
-    }
-  }
-  
-  @media (max-width: 767.98px) {
-    .table-responsive-md {
-      display: block;
-      width: 100%;
-      overflow-x: auto;
-      -webkit-overflow-scrolling: touch;
-    }
-    .table-responsive-md > .table-bordered {
-      border: 0;
-    }
-  }
-  
-  @media (max-width: 991.98px) {
-    .table-responsive-lg {
-      display: block;
-      width: 100%;
-      overflow-x: auto;
-      -webkit-overflow-scrolling: touch;
-    }
-    .table-responsive-lg > .table-bordered {
-      border: 0;
-    }
-  }
-  
-  @media (max-width: 1199.98px) {
-    .table-responsive-xl {
-      display: block;
-      width: 100%;
-      overflow-x: auto;
-      -webkit-overflow-scrolling: touch;
-    }
-    .table-responsive-xl > .table-bordered {
-      border: 0;
-    }
-  }
+ 
   
   .table-responsive {
     display: block;
@@ -1891,11 +1679,7 @@
     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   }
   
-  @media (prefers-reduced-motion: reduce) {
-    .form-control {
-      transition: none;
-    }
-  }
+  
   
   .form-control::-ms-expand {
     background-color: transparent;
@@ -2276,54 +2060,6 @@
     width: 100%;
   }
   
-  @media (min-width: 576px) {
-    .form-inline label {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin-bottom: 0;
-    }
-    .form-inline .form-group {
-      display: flex;
-      flex: 0 0 auto;
-      flex-flow: row wrap;
-      align-items: center;
-      margin-bottom: 0;
-    }
-    .form-inline .form-control {
-      display: inline-block;
-      width: auto;
-      vertical-align: middle;
-    }
-    .form-inline .form-control-plaintext {
-      display: inline-block;
-    }
-    .form-inline .input-group,
-    .form-inline .custom-select {
-      width: auto;
-    }
-    .form-inline .form-check {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      width: auto;
-      padding-left: 0;
-    }
-    .form-inline .form-check-input {
-      position: relative;
-      flex-shrink: 0;
-      margin-top: 0;
-      margin-right: 0.25rem;
-      margin-left: 0;
-    }
-    .form-inline .custom-control {
-      align-items: center;
-      justify-content: center;
-    }
-    .form-inline .custom-control-label {
-      margin-bottom: 0;
-    }
-  }
   
   .btn {
     display: inline-block;
@@ -2341,11 +2077,6 @@
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   }
   
-  @media (prefers-reduced-motion: reduce) {
-    .btn {
-      transition: none;
-    }
-  }
   
   .btn:hover {
     color: #666666;
@@ -2406,18 +2137,18 @@
   .show > .btn-primary.dropdown-toggle:focus {
     box-shadow: 0 0 0 0.2rem rgba(58, 176, 195, 0.5);
   }
-  
-  .btn-secondary {
-    color: #fff;
-    background-color: #00394f;
-    border-color: #00394f;
-  }
-  
-  .btn-secondary:hover {
-    color: #fff;
-    background-color: #001d29;
-    border-color: #00141c;
-  }
+    
+    .bg-secondary {
+      color: #fff;
+      background-color: #00394f;
+      border-color: #00394f;
+    }
+    
+    .bg-secondary:hover {
+      color: #fff;
+      background-color: #001d29;
+      border-color: #00141c;
+    }
   
   .btn-secondary:focus, .btn-secondary.focus {
     color: #fff;
@@ -2975,11 +2706,7 @@
     transition: opacity 0.15s linear;
   }
   
-  @media (prefers-reduced-motion: reduce) {
-    .fade {
-      transition: none;
-    }
-  }
+ 
   
   .fade:not(.show) {
     opacity: 0;
@@ -2996,11 +2723,7 @@
     transition: height 0.35s ease;
   }
   
-  @media (prefers-reduced-motion: reduce) {
-    .collapsing {
-      transition: none;
-    }
-  }
+ 
   
   .dropup,
   .dropright,
@@ -3058,49 +2781,7 @@
     left: auto;
   }
   
-  @media (min-width: 576px) {
-    .dropdown-menu-sm-left {
-      right: auto;
-      left: 0;
-    }
-    .dropdown-menu-sm-right {
-      right: 0;
-      left: auto;
-    }
-  }
   
-  @media (min-width: 768px) {
-    .dropdown-menu-md-left {
-      right: auto;
-      left: 0;
-    }
-    .dropdown-menu-md-right {
-      right: 0;
-      left: auto;
-    }
-  }
-  
-  @media (min-width: 992px) {
-    .dropdown-menu-lg-left {
-      right: auto;
-      left: 0;
-    }
-    .dropdown-menu-lg-right {
-      right: 0;
-      left: auto;
-    }
-  }
-  
-  @media (min-width: 1200px) {
-    .dropdown-menu-xl-left {
-      right: auto;
-      left: 0;
-    }
-    .dropdown-menu-xl-right {
-      right: 0;
-      left: auto;
-    }
-  }
   
   .dropup .dropdown-menu {
     top: auto;
@@ -4461,212 +4142,7 @@
     color: #fff;
   }
   
-  .card {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    min-width: 0;
-    word-wrap: break-word;
-    background-color: #fff;
-    background-clip: border-box;
-    border: 1px solid rgba(0, 0, 0, 0.125);
-    border-radius: 5px;
-  }
   
-  .card > hr {
-    margin-right: 0;
-    margin-left: 0;
-  }
-  
-  .card > .list-group {
-    border-top: inherit;
-    border-bottom: inherit;
-  }
-  
-  .card > .list-group:first-child {
-    border-top-width: 0;
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
-  }
-  
-  .card > .list-group:last-child {
-    border-bottom-width: 0;
-    border-bottom-right-radius: 4px;
-    border-bottom-left-radius: 4px;
-  }
-  
-  .card > .card-header + .list-group,
-  .card > .list-group + .card-footer {
-    border-top: 0;
-  }
-  
-  .card-body {
-    flex: 1 1 auto;
-    min-height: 1px;
-    padding: 1.25rem;
-  }
-  
-  .card-title {
-    margin-bottom: 0.75rem;
-  }
-  
-  .card-subtitle {
-    margin-top: -0.375rem;
-    margin-bottom: 0;
-  }
-  
-  .card-text:last-child {
-    margin-bottom: 0;
-  }
-  
-  .card-link:hover {
-    text-decoration: none;
-  }
-  
-  .card-link + .card-link {
-    margin-left: 1.25rem;
-  }
-  
-  .card-header {
-    padding: 0.75rem 1.25rem;
-    margin-bottom: 0;
-    background-color: rgba(0, 0, 0, 0.03);
-    border-bottom: 1px solid rgba(0, 0, 0, 0.125);
-  }
-  
-  .card-header:first-child {
-    border-radius: 4px 4px 0 0;
-  }
-  
-  .card-footer {
-    padding: 0.75rem 1.25rem;
-    background-color: rgba(0, 0, 0, 0.03);
-    border-top: 1px solid rgba(0, 0, 0, 0.125);
-  }
-  
-  .card-footer:last-child {
-    border-radius: 0 0 4px 4px;
-  }
-  
-  .card-header-tabs {
-    margin-right: -0.625rem;
-    margin-bottom: -0.75rem;
-    margin-left: -0.625rem;
-    border-bottom: 0;
-  }
-  
-  .card-header-pills {
-    margin-right: -0.625rem;
-    margin-left: -0.625rem;
-  }
-  
-  .card-img-overlay {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    padding: 1.25rem;
-    border-radius: 4px;
-  }
-  
-  .card-img,
-  .card-img-top,
-  .card-img-bottom {
-    flex-shrink: 0;
-    width: 100%;
-  }
-  
-  .card-img,
-  .card-img-top {
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
-  }
-  
-  .card-img,
-  .card-img-bottom {
-    border-bottom-right-radius: 4px;
-    border-bottom-left-radius: 4px;
-  }
-  
-  .card-deck .card {
-    margin-bottom: 15px;
-  }
-  
-  @media (min-width: 576px) {
-    .card-deck {
-      display: flex;
-      flex-flow: row wrap;
-      margin-right: -15px;
-      margin-left: -15px;
-    }
-    .card-deck .card {
-      flex: 1 0 0%;
-      margin-right: 15px;
-      margin-bottom: 0;
-      margin-left: 15px;
-    }
-  }
-  
-  .card-group > .card {
-    margin-bottom: 15px;
-  }
-  
-  @media (min-width: 576px) {
-    .card-group {
-      display: flex;
-      flex-flow: row wrap;
-    }
-    .card-group > .card {
-      flex: 1 0 0%;
-      margin-bottom: 0;
-    }
-    .card-group > .card + .card {
-      margin-left: 0;
-      border-left: 0;
-    }
-    .card-group > .card:not(:last-child) {
-      border-top-right-radius: 0;
-      border-bottom-right-radius: 0;
-    }
-    .card-group > .card:not(:last-child) .card-img-top,
-    .card-group > .card:not(:last-child) .card-header {
-      border-top-right-radius: 0;
-    }
-    .card-group > .card:not(:last-child) .card-img-bottom,
-    .card-group > .card:not(:last-child) .card-footer {
-      border-bottom-right-radius: 0;
-    }
-    .card-group > .card:not(:first-child) {
-      border-top-left-radius: 0;
-      border-bottom-left-radius: 0;
-    }
-    .card-group > .card:not(:first-child) .card-img-top,
-    .card-group > .card:not(:first-child) .card-header {
-      border-top-left-radius: 0;
-    }
-    .card-group > .card:not(:first-child) .card-img-bottom,
-    .card-group > .card:not(:first-child) .card-footer {
-      border-bottom-left-radius: 0;
-    }
-  }
-  
-  .card-columns .card {
-    margin-bottom: 0.75rem;
-  }
-  
-  @media (min-width: 576px) {
-    .card-columns {
-      column-count: 3;
-      column-gap: 1.25rem;
-      orphans: 1;
-      widows: 1;
-    }
-    .card-columns .card {
-      display: inline-block;
-      width: 100%;
-    }
-  }
   
   .accordion {
     overflow-anchor: none;
@@ -5137,57 +4613,6 @@
     color: #040505;
   }
   
-  @keyframes progress-bar-stripes {
-    from {
-      background-position: 1rem 0;
-    }
-    to {
-      background-position: 0 0;
-    }
-  }
-  
-  .progress {
-    display: flex;
-    height: 1rem;
-    overflow: hidden;
-    line-height: 0;
-    font-size: 0.75rem;
-    background-color: #e9ecef;
-    border-radius: 5px;
-  }
-  
-  .progress-bar {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    overflow: hidden;
-    color: #fff;
-    text-align: center;
-    white-space: nowrap;
-    background-color: #17a2b8;
-    transition: width 0.6s ease;
-  }
-  
-  @media (prefers-reduced-motion: reduce) {
-    .progress-bar {
-      transition: none;
-    }
-  }
-  
-  .progress-bar-striped {
-    background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
-    background-size: 1rem 1rem;
-  }
-  
-  .progress-bar-animated {
-    animation: progress-bar-stripes 1s linear infinite;
-  }
-  
-  @media (prefers-reduced-motion: reduce) {
-    .progress-bar-animated {
-      animation: none;
-    }
-  }
   
   .media {
     display: flex;
@@ -7689,10 +7114,10 @@
     margin-right: 1.5rem !important;
   }
   
-  .mb-4,
-  .my-4 {
-    margin-bottom: 1.5rem !important;
-  }
+    .mb-4,
+    .my-4 {
+      margin-bottom: 1.5rem !important;
+    }
   
   .ml-4,
   .mx-4 {
