--- a/css/style.css
+++ b/css/style.css
@@ -47,12 +47,91 @@
     line-height: 1.15;
     -webkit-text-size-adjust: 100%;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    overflow-x: hidden;
   }
   
   article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
     display: block;
   }
   
+.btn-primary {
+  color: #fff;
+  background-color: #17a2b8;
+  border-color: #17a2b8;
+}
+
+.btn-primary:hover {
+  color: #fff !important;
+  background-color: #138496!important;
+  border-color: #117a8b ;
+}
+.btn-primary:focus, .btn-primary.focus {
+  color: #fff;
+  background-color: #138496;
+  border-color: #117a8b;
+  box-shadow: 0 0 0 0.2rem rgba(58, 176, 195, 0.5);
+}
+
+.btn-primary.disabled, .btn-primary:disabled {
+  color: #fff;
+  background-color: #17a2b8;
+  border-color: #17a2b8;
+}
+.bg-primary{
+color: #fff;
+  background-color: #17a2b8 !important;
+  border-color: #17a2b8;
+}
+  
+
+.bg-secondary {
+  color: #fff!important;
+  background-color: #00394f!important;
+  border-color: #00394f!important;
+}
+
+.bg-secondary:hover {
+  color: #fff!important;
+  background-color: #00394f!important;
+  border-color: #00394f!important;
+}
+
+.btn-outline-primary {
+  color: #17a2b8;
+  border-color: #17a2b8;
+}
+
+.text-primary {
+  color: #17a2b8 !important;
+}
+
+a.text-primary:hover, a.text-primary:focus {
+  color: #0f6674 !important;
+}
+.border-0 {
+  border: 0 !important;
+}
+.form-control {
+  display: block;
+  width: 100%;
+  height: calc(1.5em + 0.75rem + 2px);
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 5px;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+.btn-secondary,.btn-secondary:focus, .btn-secondary.focus {
+  color: #fff!important;
+  background-color: #00394f!important;
+  border-color: #00394f!important;
+  box-shadow: 0 0 0 0.2rem rgba(38, 87, 105, 0.5)!important;
+}
   body {
     margin: 0;
     font-family: "Nunito", sans-serif;
